--- a/src/components/Body/Link.module.css
+++ b/src/components/Body/Link.module.css
@@ -6,5 +6,11 @@
   gap: 24px;
   width: 100%;
   height: 528px;
-  background-color: burlywood;
+  /* background-color: burlywood; */
+}
+
+.link a {
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: inherit;
 }
