--- a/src/components/Body/Profile.module.css
+++ b/src/components/Body/Profile.module.css
@@ -7,5 +7,14 @@
   isolation: isolate;
   width: 100%;
   height: 140px;
-  background-color: burlywood;
+}
+
+.profile img {
+  width: 88px;
+  height: 88px;
+  border-radius: 5rem;
+}
+
+.profile h1:nth-child(3) {
+  display: none;
 }
