--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -7,4 +7,12 @@
   gap: 12px;
   width: 100%;
   height: 68px;
+  border: 1px;
+  border-radius: 1rem;
+  filter: drop-shadow(0px 1px 2px rgba(16, 24, 40, 0.05))
+}
+
+.button:hover {
+  border: 3px solid rgba(127, 61, 240, 0.841);
+  border-radius: 0;
 }
