--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -9,7 +9,8 @@
   height: 68px;
   border: 1px;
   border-radius: 1rem;
-  filter: drop-shadow(0px 1px 2px rgba(16, 24, 40, 0.05))
+  filter: drop-shadow(0px 1px 2px rgba(16, 24, 40, 0.05));
+  background-color: rgba(186, 183, 183, 0.354);
 }
 
 .button:hover {
