--- a/src/components/pages/Contact.module.css
+++ b/src/components/pages/Contact.module.css
@@ -37,7 +37,7 @@ form div {
   align-items: flex-start;
   padding: 0px;
   gap: 6px;
-  width: 343px;
+  width: 91.4%;
   height: 70px;
 }
 
@@ -58,12 +58,16 @@ form div input {
   align-items: center;
   padding: 10px 14px;
   gap: 8px;
-  width: 343px;
+  width: 100%;
   height: 44px;
   background: #FFFFFF;
   border: 1px solid #D0D5DD;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
+}
+
+form .text {
+  height: 158px;
 }
 
 form div textarea {
@@ -80,8 +84,3 @@ form div textarea {
   border-radius: 8px;
 }
 
-@media screen and (min-width: 768px) {
-  .container {
-    width: 80%;
-  }
-}
