--- a/src/components/pages/Contact.module.css
+++ b/src/components/pages/Contact.module.css
@@ -12,12 +12,33 @@
 
 .header {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: flex-start;
-  padding: 0px i6px;
-  width: 100%;
+  padding: 0px;
+  width: 91.4%;
+  margin: auto;
   height: 116px;
-  background-color: antiquewhite;
+}
+
+.header h1 {
+  width: 343px;
+  height: 44px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 3.6rem;
+  line-height: 44px;
+  letter-spacing: -0.02em;
+  color: #101828;
+}
+
+.header p {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.8rem;
+  line-height: 28px;
+  color: #475467;
 }
 
 form {
@@ -27,7 +48,7 @@ form {
   padding: 0px;
   margin: auto;
   gap: 32px;
-  width: 91.4%;
+  width: 100%;
   height: 592px;
 }
 
@@ -44,7 +65,7 @@ form div {
 form div label {
   width: 100px;
   height: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Inter';
   font-weight: 500;
   font-size: 1.4rem;
   line-height: 2rem;
@@ -84,3 +105,57 @@ form div textarea {
   border-radius: 8px;
 }
 
+form .check {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 12px;
+  width: 91.4%;
+  height: 48px;
+}
+
+form .check input {
+  box-sizing: border-box;
+  width: 20px;
+  height: 20px;
+  background: #FFFFFF;
+  border: 1px solid #D0D5DD;
+  border-radius: 6px;
+}
+
+form .check label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 2px;
+  width: 90.7%;
+  height: 48px;
+  font-size: 1.2rem;
+  color: #475467;
+}
+
+button {
+  margin: auto;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 20px;
+  gap: 8px;
+  width: 343px;
+  height: 48px;
+  background: #1570EF;
+  border: 1px solid #1570EF;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  border-radius: 8px;
+  color: #FFFFFF;
+}
+
+/* @media screen and (min-width: 768px) {
+  .container {
+    width: 80%;
+  }
+} */
