--- a/src/components/pages/Contact.module.css
+++ b/src/components/pages/Contact.module.css
@@ -145,7 +145,7 @@ button {
   align-items: center;
   padding: 12px 20px;
   gap: 8px;
-  width: 343px;
+  width: 91.4%;
   height: 48px;
   background: #1570EF;
   border: 1px solid #1570EF;
@@ -154,8 +154,8 @@ button {
   color: #FFFFFF;
 }
 
-/* @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .container {
     width: 80%;
   }
-} */
+}
