--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,11 +4,12 @@
   align-items: center;
   padding: 32px 0px;
   gap: 64px;
-  position: absolute;
+  /* position: absolute; */
   width: 100%;
   height: 196px;
-  left: 0px;
-  top: 892px;
+  /* left: 0px; */
+  /* top: 892px; */
+  margin-top: 5px;
 }
 
 .content {
@@ -20,6 +21,7 @@
   gap: 16px;
   width: 91.4%;
   height: 132px;
+  border-top: 1.3px solid rgba(185, 178, 178, 0.098);
 }
 
 @media screen and (min-width: 768px) {
