--- a/src/components/pages/Contact.module.css
+++ b/src/components/pages/Contact.module.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.cdnfonts.com/css/inter?styles=29142,29132,29135,29137,29140,29128');
+
+* {
+  font-family: 'Inter' sans-serif;
+}
 .layout {
   display: flex;
   flex-direction: column;
@@ -23,7 +28,7 @@
 .header h1 {
   width: 343px;
   height: 44px;
-  font-family: 'Inter';
+  /* font-family: 'Inter' sans-serif; */
   font-style: normal;
   font-weight: 600;
   font-size: 3.6rem;
@@ -33,7 +38,7 @@
 }
 
 .header p {
-  font-family: 'Inter';
+  /* font-family: 'Inter' sans-serif; */
   font-style: normal;
   font-weight: 400;
   font-size: 1.8rem;
@@ -79,7 +84,6 @@ form .email, form .message {
 form div label {
   width: 100px;
   height: 20px;
-  font-family: 'Inter';
   font-weight: 500;
   font-size: 1.4rem;
   line-height: 2rem;
@@ -118,7 +122,7 @@ form div textarea {
   border: 1px solid #D0D5DD;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
 }
 
 form .check {
